--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.list-filter {
+    padding: 20px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.center {
+    text-align: center;
+}
+.center div {
+    margin: auto;
+}
+.table-hover tr {
+    cursor: pointer;
 }
